--- a/checkout.html
+++ b/checkout.html
@@ -279,7 +279,7 @@
                         <div class="col-md-12">
                             <div class="coupon-accordion">
                                 <!-- ACCORDION START -->
-                                <h3>Returning customer? <span id="showlogin">Click here to login</span></h3>
+                                <h4>Returning customer? <span id="showlogin">Click here to login</span></h4>
                                 <div id="checkout-login" class="coupon-content">
                                     <div class="coupon-info">
                                         <p class="coupon-text">Quisque gravida turpis sit amet nulla posuere lacinia. Cras sed est sit amet ipsum luctus.</p>
@@ -307,7 +307,7 @@
                                 </div>
                                 <!-- ACCORDION END -->	
                                 <!-- ACCORDION START -->
-                                <h3>Have a coupon? <span id="showcoupon">Click here to enter your code</span></h3>
+                                <h4>Have a coupon? <span id="showcoupon">Click here to enter your code</span></h4>
                                 <div id="checkout_coupon" class="coupon-checkout-content">
                                     <div class="coupon-info">
                                         <form action="#">
@@ -322,14 +322,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-5">
                         <div class="col-lg-6 col-md-12 col-12">
                             <form action="#">
                                 <div class="checkbox-form">						
                                     <h3>Billing Details</h3>
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <div class="country-select">
+                                            <div class="country-selects">
                                                 <label>Country <span class="required">*</span></label>
                                                 <select>
                                                   <option value="volvo">bangladesh</option>
@@ -511,17 +511,17 @@
                             <div class="your-order">
                                 <h3>Your order</h3>
                                 <div class="your-order-table table-responsive">
-                                    <table>
+                                    <table class="table-bordered">
                                         <thead>
                                             <tr>
-                                                <th class="product-name">Product</th>
-                                                <th class="product-total">Total</th>
+                                                <th class="product-name-heading">Product</th>
+                                                <th class="product-total-heading">Total</th>
                                             </tr>							
                                         </thead>
                                         <tbody>
                                             <tr class="cart_item">
                                                 <td class="product-name">
-                                                    Vestibulum suscipit <strong class="product-quantity"> × 1</strong>
+                                                    <strong class="product-quantity">1 × </strong> Vestibulum suscipit
                                                 </td>
                                                 <td class="product-total">
                                                     <span class="amount">£165.00</span>
@@ -529,7 +529,7 @@
                                             </tr>
                                             <tr class="cart_item">
                                                 <td class="product-name">
-                                                    Vestibulum dictum magna	<strong class="product-quantity"> × 1</strong>
+                                                    <strong class="product-quantity">1 × </strong> Vestibulum dictum magna
                                                 </td>
                                                 <td class="product-total">
                                                     <span class="amount">£50.00</span>
@@ -556,7 +556,7 @@
                                                 <div class="panel-heading">
                                                     <h5 class="panel-title"><a data-toggle="collapse" aria-expanded="true" data-parent="#faq" href="#payment-1">Direct Bank Transfer.</a></h5>
                                                 </div>
-                                                <div id="payment-1" class="panel-collapse collapse show">
+                                                <div id="payment-1" class="panel-collapse collapse">
                                                     <div class="panel-body">
                                                         <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
                                                     </div>
@@ -583,9 +583,12 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="order-button-payment">
+                                        <!--<div class="order-button-payment">
                                             <input type="submit" value="Place order" />
-                                        </div>								
+                                        </div>-->
+                                        <div class="theme-btn text-right">
+                                            <a href="#">place order</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
